file upload bug fix and edited gitignore

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -541,7 +541,7 @@
 				<div class="single_location col-lg-3 col-sm-3">
 					<img src="images/our-location/image-1.png" alt="">
 					<h2>Location</h2>
-					<p>The wedding party will begin @ <span class="highlight">14:00 P.M</span> on <span class="highlight">2016.07.02</span> . Free drinks and music is on the way, no costume is needed.</p>
+					<p>국방컨벤션 1층 에메랄드홀 <span class="highlight">오후 2시 </span> <span class="highlight"> 2016.07.02</span><br>[예식장 내 무료주차 가능]</p>
 				</div>
 				<!-- <div class="single_location col-lg-3 col-sm-3">
 					<img src="images/our-location/image-2.png" alt="">
