--- a/views/index.ejs
+++ b/views/index.ejs
@@ -206,7 +206,7 @@
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details wow slideInLeft">
 							<div class="details_content">
-								<h2>드디어 첫 만남! @슈투트가르트</h2>
+								<h2>드디어 첫 만남!<br> @슈투트가르트</h2>
 							</div>
 						</div>
 					</li>
@@ -214,7 +214,7 @@
 					<li class="clearfix">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details  wow slideInRight">
 							<div class="details_content">
-								<h2>연애의 시작! @슈투트 시립극장</h2>
+								<h2>연애의 시작! <br>@슈투트 시립극장</h2>
 								<!-- <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p> -->
 							</div>
 						</div>
