--- a/views/index.ejs
+++ b/views/index.ejs
@@ -92,7 +92,7 @@
 					<div class="info-box">
 						<h2>Seonwoo Park</h2>
 						<span>신랑</span>
-						<p>박선우입니다. 결혼합니다. 축하해주세요.</p>
+						<p>교환 학생으로 독일에 갔다가<br> 하라는 공부는 안하고 연애만 하다 왔다.<br>결과는 성공적 ♬</p>
 					</div>
 				</div> <!-- /.single_groom -->
 
@@ -102,7 +102,7 @@
 					<div class="info-box">
 						<h2>Suji Lee</h2>
 						<span>신부</span>
-						<p>이수지입니다.결혼합니다.축하해주세요.</p>
+						<p>독일로 유학가서<br> 열심히 공부하고 있는데<br> 옆에 뭐가 붙었다.<br>알고보니 미래의 남편♪</p>
 					</div>
 				</div> <!-- /.single_bride -->
 
@@ -385,7 +385,7 @@
 
 		<!-- .footer_bottom -->
 		<div class="footer_bottom">
-			<p> Supported by <a href="http://github.com/outofmap">outofmap</a></p>
+			<p> Supported by <a href="http://github.com/outofmap">Songhee Park</a></p>
 		</div> <!-- /.footer_bottom -->
 	</footer> <!-- /footer -->
 
