--- a/views/index.ejs
+++ b/views/index.ejs
@@ -129,6 +129,7 @@
 							<div class="details_content">
 								<h2>Suji's birthday</h2>
 								<p>이수지 태어남 @원주</p>
+								<img src="images/resources/sujiBirth.jpeg" alt="">
 							</div>
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 date wow slideInLeft">
@@ -143,6 +144,7 @@
 							<div class="details_content">
 								<h2>Seonwoo's birthday</h2>
 								<p>박선우 태어남 @춘천</p>
+								<img src="images/resources/sunwooBirth.jpeg" alt="">
 							</div>
 						</div>
 					</li>
@@ -150,6 +152,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details  wow slideInRight">
 							<div class="details_content">
 								<h2>이수지 대학입학 @서울</h2>
+								<img src="images/resources/sujiUni.jpeg" alt="">
 								<!-- <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p> -->
 							</div>
 						</div>
@@ -164,6 +167,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details wow slideInLeft">
 							<div class="details_content">
 								<h2>박선우 대학입학 @서울</h2>
+								<img src="images/resources/sunwooUni.jpeg" alt="">
 							</div>
 						</div>
 					</li>
@@ -171,6 +175,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details  wow slideInRight">
 							<div class="details_content">
 								<h2>같은 수련회 참석 @CCC</h2>
+								<img src="images/resources/ccc.jpeg" alt="">
 								<!-- <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p> -->
 							</div>
 						</div>
@@ -185,6 +190,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details wow slideInLeft">
 							<div class="details_content">
 								<h2>이수지 유학시작 @독일</h2>
+								<img src="images/resources/sujiStart.jpeg" alt="">
 							</div>
 						</div>
 					</li>
@@ -193,6 +199,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details  wow slideInRight">
 							<div class="details_content">
 								<h2>박선우 교환학생 @독일</h2>
+								<img src="images/resources/sunwooStart.jpeg" alt="">
 								<!-- <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p> -->
 							</div>
 						</div>
@@ -207,6 +214,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details wow slideInLeft">
 							<div class="details_content">
 								<h2>드디어 첫 만남!<br> @슈투트가르트</h2>
+								<img src="images/resources/firstmeet.jpeg" alt="">
 							</div>
 						</div>
 					</li>
@@ -215,6 +223,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details  wow slideInRight">
 							<div class="details_content">
 								<h2>연애의 시작! <br>@슈투트 시립극장</h2>
+								<img src="images/resources/lovestart.jpeg" alt="">
 								<!-- <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p> -->
 							</div>
 						</div>
@@ -229,6 +238,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details wow slideInLeft">
 							<div class="details_content">
 								<h2>프로포즈! @서울 성북구</h2>
+								<img src="images/resources/propose.jpg" alt="couple pic">
 							</div>
 						</div>
 					</li>
@@ -236,6 +246,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details  wow slideInRight">
 							<div class="details_content">
 								<h2>마침내 결혼! @서울 용산구</h2>
+								<img src="images/resources/wedding.jpeg" alt="couple pic">
 								<!-- <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p> -->
 							</div>
 						</div>
