profile pic edit

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,7 +88,7 @@
 				<!-- .single_groom -->
 				<div class="col-lg-5 col-md-5 col-sm-6 col-xs-12 single_groom col-lg-push-1 col-md-push-1 wow slideInLeft" data-animation-duration="3s" data-animation-delay="1s">
 					<!-- 신랑사진 -->
-					<img src="images/resources/sunwoo.png" alt="Groom image">
+					<img src="images/resources/신랑b.png" alt="Groom image">
 					<div class="info-box">
 						<h2>Seonwoo Park</h2>
 						<span>신랑</span>
@@ -98,7 +98,7 @@
 
 				<!-- .single_bride -->
 				<div class="col-lg-5 col-md-5 col-sm-6 col-xs-12 single_bride col-lg-offset-1 col-md-offset-1 wow slideInRight"  data-animation-duration="3s" data-animation-delay="2s">
-					<img src="images/resources/suji.png" alt="Bride image">
+					<img src="images/resources/신부.png" alt="Bride image">
 					<div class="info-box">
 						<h2>Suji Lee</h2>
 						<span>신부</span>
