--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>선우와 수지가 결혼해요</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta property="og:image" content="images/logo/thum.jpg">
 	    <link rel="shortcut icon" href="favicon.ico">
 		<!-- Bootstrap -->
 		<link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
