--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,10 @@
 		<meta charset="UTF-8">
 		<title>선우와 수지가 결혼해요</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta property="og:image" content="images/logo/thum.jpg">
+		<meta property="og:url" content="https://dearhere.com">
+    <meta property="og:title" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://dearhere.com/images/logo/thum.JPG">
 	    <link rel="shortcut icon" href="favicon.ico">
 		<!-- Bootstrap -->
 		<link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
