--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>선우와 수지가 결혼해요</title>
+		<title>박선우와 이수지 결혼합니다!</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:url" content="https://dearhere.com">
-    <meta property="og:title" content="">
+    <meta property="og:title" content="박선우와 이수지 결혼합니다!">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://dearhere.com/images/logo/thum.JPG">
 	    <link rel="shortcut icon" href="favicon.ico">
