--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<title>박선우와 이수지 결혼합니다!</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta property="og:url" content="https://dearhere.com">
-    <meta property="og:title" content="박선우와 이수지 결혼합니다!">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://dearhere.com/images/logo/thum.JPG">
-	    <link rel="shortcut icon" href="favicon.ico">
+		<meta property="og:url" content="http://dearhere.com">
+                <meta property="og:title" content="박선우와 이수지 결혼합니다!">
+                <meta property="og:type" content="website">
+                <meta property="og:image" content="http://dearhere.com/images/logo/thum.JPG">
+	        <link rel="shortcut icon" href="favicon.ico">
 		<!-- Bootstrap -->
 		<link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<!-- Main CSS -->
@@ -226,7 +226,7 @@
 					<li class="clearfix">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details  wow slideInRight">
 							<div class="details_content">
-								<h2>연애의 시작! <br>@슈투트 시립극장</h2>
+								<h2>연애의 시작! <br>@슈투트 국립극장</h2>
 								<img src="images/resources/lovestart.jpeg" alt="">
 								<!-- <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p> -->
 							</div>
