timeline for english ver.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -131,8 +131,8 @@
 					<li class="clearfix">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details wow slideInRight">
 							<div class="details_content">
-								<h2>Suji's birthday</h2>
-								<p>이수지 태어남 @원주</p>
+								<h2>Suji's Birth</h2>
+								<p>수지 태어남 @원주</p>
 								<img src="images/resources/sujiBirth.jpeg" alt="">
 							</div>
 						</div>
@@ -146,8 +146,8 @@
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details wow slideInLeft">
 							<div class="details_content">
-								<h2>Seonwoo's birthday</h2>
-								<p>박선우 태어남 @춘천</p>
+								<h2>Seonwoo's Birth</h2>
+								<p>선우 태어남 @춘천</p>
 								<img src="images/resources/sunwooBirth.jpeg" alt="">
 							</div>
 						</div>
@@ -155,7 +155,8 @@
 					<li class="clearfix">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details  wow slideInRight">
 							<div class="details_content">
-								<h2>이수지 대학입학 @서울</h2>
+								<h2>Suji Moves to Seoul</h2>
+								<p>수지 대학입학 @서울</p>
 								<img src="images/resources/sujiUni.jpeg" alt="">
 								<!-- <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p> -->
 							</div>
@@ -170,7 +171,8 @@
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details wow slideInLeft">
 							<div class="details_content">
-								<h2>박선우 대학입학 @서울</h2>
+								<h2>Seonwoo Moves to Seoul</h2>
+								<p>선우 대학입학 @서울</p>
 								<img src="images/resources/sunwooUni.jpeg" alt="">
 							</div>
 						</div>
@@ -178,7 +180,8 @@
 					<li class="clearfix">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details  wow slideInRight">
 							<div class="details_content">
-								<h2>같은 수련회 참석 @CCC</h2>
+								<h2>Maybe We Met at the time…</h2>
+								<p>같은 수련회 참석 @CCC</p>
 								<img src="images/resources/ccc.jpeg" alt="">
 								<!-- <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p> -->
 							</div>
@@ -193,7 +196,8 @@
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details wow slideInLeft">
 							<div class="details_content">
-								<h2>이수지 유학시작 @독일</h2>
+								<h2>Suji Moves to Germany</h2>
+								<p>수지 유학시작 @독일</p>
 								<img src="images/resources/sujiStart.jpeg" alt="">
 							</div>
 						</div>
@@ -202,7 +206,8 @@
 					<li class="clearfix">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details  wow slideInRight">
 							<div class="details_content">
-								<h2>박선우 교환학생 @독일</h2>
+								<h2>Seonwoo Moves to Germany</h2>
+								<p>박선우 교환학생 @독일</p>
 								<img src="images/resources/sunwooStart.jpeg" alt="">
 								<!-- <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p> -->
 							</div>
@@ -217,7 +222,8 @@
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details wow slideInLeft">
 							<div class="details_content">
-								<h2>드디어 첫 만남!<br> @슈투트가르트</h2>
+								<h2>The First Contact at Stuttgart</h2>
+								<p>드디어 첫 만남!<br> @슈투트가르트</p>
 								<img src="images/resources/firstmeet.jpeg" alt="">
 							</div>
 						</div>
@@ -226,7 +232,8 @@
 					<li class="clearfix">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details  wow slideInRight">
 							<div class="details_content">
-								<h2>연애의 시작! <br>@슈투트 국립극장</h2>
+								<h2>Beginning of Love!</h2>
+								<p>연애의 시작! <br>@슈투트 국립극장</p>
 								<img src="images/resources/lovestart.jpeg" alt="">
 								<!-- <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p> -->
 							</div>
@@ -241,7 +248,8 @@
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details wow slideInLeft">
 							<div class="details_content">
-								<h2>프로포즈! @서울 성북구</h2>
+								<h2>Propose!</h2>
+								<p>프로포즈! @서울 성북구</p>
 								<img src="images/resources/propose.jpg" alt="couple pic">
 							</div>
 						</div>
@@ -249,7 +257,8 @@
 					<li class="clearfix">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 details  wow slideInRight">
 							<div class="details_content">
-								<h2>마침내 결혼! @서울 용산구</h2>
+								<h2>We Are Getting Married!</h2>
+								<p>마침내 결혼! @서울 용산구</p>
 								<img src="images/resources/wedding.jpeg" alt="couple pic">
 								<!-- <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p> -->
 							</div>
